# ressim

./: .dockerignore  .gitignore  .prettierrc  AGENTS.md  ANALYTICAL_REVIEW.md  CAPILLARY_P1_COMPLETE.md  CAPILLARY_PRESSURE_SUMMARY.md  CAPILLARY_QUICK_REF.md  CHART_IMPROVEMENTS.md  CODEX_FIM_DIALOGUE_03.07.2026.md  Cargo.toml  DOCKER_COMPLETE_SUMMARY.md  DOCKER_FILES_INDEX.md  DOCKER_MIGRATION_CHECKLIST.md  DOCKER_QUICK_START.md  DOCKER_README.md  DOCKER_SETUP_GUIDE.md  DOCKER_VISUAL_GUIDE.md  Dockerfile  ISOLATED_CONFIGURATION_SUMMARY.md  ISOLATED_CONTAINER_GUIDE.md  ISOLATED_DOCS_INDEX.md  ISOLATED_MIGRATION_COMPLETE.md  ISOLATED_QUICK_REF.md  ISOLATED_QUICK_START.md  NOTICE  P2_CHECKLIST.md  P2_COMPLETION_REPORT.md  P2_MASTER_INDEX.md  P2_QUICK_REF.md  P2_SUMMARY.md  PLAN.md  README.md  REFACTOR.md  REFACTORING_COMPLETE.md  ROADMAP.md  SETUP_COMPLETE.md  SPE1CASE1.DBG  START_HERE.md  TODO.md  (+55 more)
src/lib/ressim/: Cargo.toml  THREE_PHASE_PLAN.md  fix_grid_cells_final.mjs  fix_grid_cells_tests.mjs  fix_tests.mjs  simulator_bg.wasm  test_debug.rs  tests_diagnostic.rs
src/lib/ressim/pkg/: package.json  simulator.d.ts  simulator.js  simulator_bg.d.ts  simulator_bg.js  simulator_bg.wasm  simulator_bg.wasm.d.ts
src/lib/ressim/src/: capillary.rs  frontend.rs  grid.rs  lib.rs  mobility.rs  pressure_eqn.rs  pvt.rs  relperm.rs  reporting.rs  solver.rs  step.rs  timing.rs  transport.rs  well.rs  well_control.rs
src/lib/ressim/src/fim/: ad.rs  assembly.rs  assembly_ad.rs  assembly_tests.rs  flash.rs  flash_ad.rs  flow_resv.rs  flux.rs  mod.rs  newton.rs  numjac.rs  properties.rs  scaling.rs  scaling.rs.orig  state.rs  timestep.rs  trace_sink.rs  wells.rs  wells_ad.rs  wells_inner.rs
src/lib/ressim/src/fim/linear/: capture.rs  dense_lu_debug.rs  flow_lifecycle.rs  gmres_block_jacobi.rs  mod.rs  solver_lab.rs  sparse_lu_debug.rs  well_schur.rs
src/lib/ressim/src/impes/: mod.rs  pressure.rs  timestep.rs  transport.rs
src/lib/ressim/src/solvers/: bicgstab.rs  faer_sparse_lu.rs  mod.rs
src/lib/ressim/src/tests/: README.md  buckley.rs  depletion.rs  fim_debug.rs  fim_spe1_bug.rs  geometry_api.rs  pvt_properties.rs  runtime_api.rs  spe1_acceptance.rs  spe1_fim.rs  spe1_short.rs  three_phase.rs  well_controls.rs
tools/opm_flow/: README.md  pyproject.toml
tools/opm_flow/opm_flow_tool/: __init__.py  artifacts.py  cases.py  cli.py  summary.py
tools/opm_flow/tests/: test_artifacts.py  test_summary.py
tools/opm_flow/tests/fixtures/: spe1_gas_injection_sample.RSM  wf_bl1d_sample.RSM
(+462 files in other folders)
