[project]
name = "ressim-opm-flow-tools"
version = "0.1.0"
description = "Offline OPM Flow deck/artifact tooling for ResSim predefined cases"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ressim-opm-flow = "opm_flow_tool.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
