[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.120"
js-sys = "0.3.97"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }
faer = { version = "0.24.0", default-features = false, features = ["std", "sparse-linalg"] }

# For dense vectors (RHS, pressure vector) and CG solver utilities
nalgebra = "0.34.2"
# For sparse matrices (the 'A' in Ax=b)
sprs = "0.11.4"
rand = "0.10.1"
# AMG (algebraic multigrid) for the CPR coarse pressure solve.
# Path A spike — replaces BiCGStab+ILU(0) on the n>512 coarse path.
# See docs/FIM_AMG_INTEGRATION_PLAN.md.
scirs2-sparse = "0.4"
ndarray = "0.17"

[dependencies.getrandom]
version = "0.4.2"
features = ["wasm_js"]

